# mapir-camera-ros2

./: .dockerignore  .gitignore  CMakeLists.txt  CONTRIBUTING.md  Canva.desktop  Dockerfile  README.md  package.xml  pytest.ini  setup.cfg  setup.py
.github/workflows/: ci.yml  docs.yml
Docker/: Dockerfile  docker-compose.yml  reflectance_calibration_aruco.sh  reflectance_calibration_entrypoint.sh
config/: camera_info_mapir3_ocn.example.yaml  camera_info_mapir3_ocn_1920x1440.yaml  camera_info_mapir3_ocn_4000x3000.yaml  flat_b_test.pgm  mapir3_ocn.example.yaml  mapir3_ocn_camera_info.yaml  mapir_camera_params.yaml  mapir_indices_ocn_params.yaml  mapir_indices_params.yaml  mapir_survey3_visual.urdf  reflectance_ocn.yaml  reflectance_panels.example.json  reflectance_panels.selected.json  rviz_mapir_indices.rviz  t4-r50_mapir_reflactance_target_layout.json  target_layout.json
config/udev/: 99-mapir-camera.rules
doc/: conf.py  index.md
doc/manual/: architecture.md  core_api.md  failure_modes.md  glossary.md  indices.md  parameters.md  performance_policy.md  public_api.md  quickstart.md  ros_contract.md
docs/: WIKI.md  conf.py  index.md  requirements.txt
docs/manual/: architecture.md  calibration.md  core_api.md  failure_modes.md  indices.md  parameters.md  params.md  quickstart.md  ros_contract.md
include/mapir_camera_ros2/: gstreamer_pipeline.hpp
launch/: mapir_camera.launch.py  mapir_survey3_description.launch.py
mapir_camera_core/: __init__.py  colormap.py  raw_survey3.py  spectral_indices.py  v4l2_camera.py  vignette_correction.py
mapir_camera_cpp/: CMakeLists.txt  package.xml
mapir_camera_cpp/src/: camera_node.cpp
mapir_camera_ros2/: camera_capture.py  camera_controls.py  camera_metadata.py  camera_node.py  camera_params.py  indices_node.py
mapir_camera_ros2/core/: __init__.py  colormap.py  raw_survey3.py  reflectance.py  spectral_indices.py  target_detection.py  v4l2_camera.py  vignette_correction.py
mapir_camera_ros2/include/mapir_camera_cpp/: gstreamer_pipeline.hpp
mapir_camera_ros2/nodes/: __init__.py  camera_node.py  indices_node.py  reflectance_node.py
mapir_camera_ros2/scripts/: camera_node  indices_node
mapir_camera_ros2/src/: camera_node.cpp
mapir_camera_ros2/test/: test_gstreamer_pipeline.cpp
scripts/: camera_node  indices_node  reflectance_node
src/: camera_node.cpp
test/: ament_flake8.ini  test_colormap.py  test_copyright.py  test_flake8.py  test_gstreamer_pipeline.cpp  test_indices_launch.py  test_pep257.py  test_raw_survey3.py  test_reflectance.py  test_reflectance_launch.py  test_spectral_indices.py  test_target_detection.py  test_v4l2_camera.py  test_vignette_correction.py
test/performance/: test_performance.py
tools/: calibrate_reflectance_from_raw.py  capture_ocn_doc_images.py  matplotlib_roi_selector.py  reflectance_calibration.py  target_detection.py  vignette_calibration.py
