<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mapir_camera_ros2</name>
  <version>0.0.1</version>
  <description>
  ROS 2 Jazzy driver and processing tools for the MAPIR Survey3 multispectral camera, supporting USB acquisition, PWD-triggered capture, and publication of O/C/N or N/G/R spectral bands. Provides optional real-time vegetation index computation (e.g., NDVI, GNDVI) for UAV and ground-robot mapping workflows.
  </description>
  <maintainer email="duda.andrada@isr.uc.pt">Duda Andrada</maintainer>
  <license>GPL-3.0-only</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>camera_info_manager_py</exec_depend>
  
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
