<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mapir_camera_ros2</name>
  <version>0.0.1</version>
  <description>
  ROS 2 Jazzy driver and processing tools for the MAPIR Survey3 multispectral camera, supporting USB acquisition, PWM-triggered capture, and publication of OCN or RGN/NGB spectral bands. Provides optional real-time vegetation index computation (e.g., NDVI, GNDVI) for UAV and ground-robot mapping workflows.
  </description>
  <maintainer email="duda.andrada@isr.uc.pt">Duda Andrada</maintainer>
  <license>GPL-3.0-only</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>rcl_interfaces</depend>
  <depend>camera_info_manager</depend>
  <depend>camera_info_manager_py</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_cmake_pytest</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>launch_testing</test_depend>
  <test_depend>launch_testing_ros</test_depend>
  <test_depend>python3-pytest</test_depend>
  <test_depend>python3-pytest-cov</test_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>image_transport</exec_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
