<?xml version="1.0"?>
<package format="3">
  <name>mapir_camera_cpp</name>
  <version>0.1.0</version>
  <description>C++ ROS 2 camera node for MAPIR Survey3 cameras.</description>
  <maintainer email="duda.andrada@isr.uc.pt">Duda Andrada</maintainer>
  <license>GPL-3.0-only</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>camera_info_manager</depend>
  <depend>rcl_interfaces</depend>
  <depend>opencv</depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
